--- a/frontend/src/app/functionalities/company-creation/add-admin/add-admin.component.html
+++ b/frontend/src/app/functionalities/company-creation/add-admin/add-admin.component.html
@@ -1,18 +1,18 @@
-<h2>Create Admin</h2>
+<!--<h2>Create Admin</h2>-->
 
-<form (ngSubmit)="submitAdmin()">
-    <label for="firstName">First Name:</label>
-    <input type="text" id="firstName" [(ngModel)]="adminData.firstName" name="firstName" required />
+<!--<form (ngSubmit)="submitAdmin()">-->
+<!--    <label for="firstName">First Name:</label>-->
+<!--    <input type="text" id="firstName" [(ngModel)]="adminData.firstName" name="firstName" required />-->
 
-    <label for="lastName">Last Name:</label>
-    <input type="text" id="lastName" [(ngModel)]="adminData.lastName" name="lastName" required />
+<!--    <label for="lastName">Last Name:</label>-->
+<!--    <input type="text" id="lastName" [(ngModel)]="adminData.lastName" name="lastName" required />-->
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" [(ngModel)]="adminData.email" name="email" required />
+<!--    <label for="email">Email:</label>-->
+<!--    <input type="email" id="email" [(ngModel)]="adminData.email" name="email" required />-->
 
-    <label for="email">Password:</label>
-    <input type="password" id="password" [(ngModel)]="adminData.passwordHash" name="email" required />
+<!--    <label for="email">Password:</label>-->
+<!--    <input type="password" id="password" [(ngModel)]="adminData.passwordHash" name="email" required />-->
 
-  <button type="submit">Submit Admin</button>
-    <button type="button" (click)="closeFormHandler()">Close</button>
-</form>
+<!--  <button type="submit">Submit Admin</button>-->
+<!--    <button type="button" (click)="closeFormHandler()">Close</button>-->
+<!--</form>-->
