add range to datepicker

--- a/frontend/src/app/pages/dashboard/administrator-dashboard/administrator-dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/administrator-dashboard/administrator-dashboard.component.html
@@ -301,6 +301,8 @@
           id="signingDate"
           [showIcon]="true"
           [showOnFocus]="false"
+          [minDate]="minDate"
+          [maxDate]="maxDate"
           dateFormat="mm/dd/yy"
           required
         ></p-calendar>
