--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -1,32 +1,5 @@
-<div *ngIf="userDetails" style="display: flex; flex-direction: column; width: 100%; padding: 1rem;">
-  <div class="top-bar">
-    <div class="user-profile">
-      <p-avatar
-        icon="pi pi-user"
-        [style]="{'width': '40px', 'height': '40px', 'background-color': '#007bff', 'color': '#fff', 'border-radius': '50%', 'cursor': 'pointer'}"
-        (click)="userMenu.toggle($event)">
-      </p-avatar>
-
-      <p-overlayPanel #userMenu [dismissable]="true">
-        <div class="user-details">
-          <strong>{{ userDetails.firstName }} {{ userDetails.lastName }}</strong>
-          <hr />
-          <p>{{ userDetails.email }}</p>
-          <p *ngIf="userDetails.role">Role: {{ userDetails.role }}</p>
-          <p *ngIf="userDetails.role === UserRole.Administrator || userDetails.role === UserRole.Employee">
-            Company: {{ userDetails.companyName }}
-          </p>
-        </div>
-        <hr />
-        <button pButton label="Contul meu" (click)="goToProfile()" class="p-button-text"></button>
-        <button pButton label="Logout" icon="pi pi-sign-out" (click)="logout()" class="p-button-text"></button>
-      </p-overlayPanel>
-    </div>
-  </div>
-
-  <div>
-    <app-superadmin-dashboard *ngIf="userDetails.role === UserRole.Superadmin"></app-superadmin-dashboard>
-    <app-administrator-dashboard *ngIf="userDetails.role === UserRole.Administrator"></app-administrator-dashboard>
-    <app-employee-dashboard *ngIf="userDetails.role === UserRole.Employee"></app-employee-dashboard>
-  </div>
+<div>
+    <app-superadmin-dashboard *ngIf="userDetails?.role === UserRole.Superadmin"></app-superadmin-dashboard>
+    <app-administrator-dashboard *ngIf="userDetails?.role === UserRole.Administrator"></app-administrator-dashboard>
+    <app-employee-dashboard *ngIf="userDetails?.role === UserRole.Employee"></app-employee-dashboard>
 </div>
