implementare calendar vacation request

--- a/frontend/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.html
@@ -1,1 +1,59 @@
-<p>employee-dashboard works!</p>
+<div class="card flex justify-content-center">
+<p-button (onClick)="viewVacationDetails()" label="Show vacation days information" />
+<p-dialog header="Vacation days information" [modal]="true" [(visible)]="showVacationDetailsDialog" [style]="{ width: '25rem' }">
+  <div class="flex align-items-center gap-3 mb-3">
+    <label for="previousVacationDays" class="font-semibold w-6rem">Previous Vacation Days</label>
+    <input
+      pInputText
+      id="previousVacationDays"
+      class="flex-auto"
+      [value]="userDetails?.previousYearVacationDays || 'No previous vacation days'"
+      disabled
+    />
+  </div>
+  <div class="flex align-items-center gap-3 mb-3">
+    <label for="currentVacationDays" class="font-semibold w-6rem">Vacation days left in the current year</label>
+    <input
+      pInputText
+      id="currentVacationDays"
+      class="flex-auto"
+      [value]="userDetails?.actualYearVacationDays || 'No vacation days left'"
+      disabled
+    />
+  </div>
+</p-dialog>
+</div>
+<p-button (onClick)="requestVacation()" label="Request vacation" />
+
+<p-dialog
+  header="Request vacation"
+  [modal]="true"
+  [(visible)]="requestVacationForm"
+  [style]="{ width: dialogWidth, height: dialogHeight}">
+
+  <div class="card">
+    <p-messages
+      [(value)]="messages"
+      [showTransitionOptions]="'500ms'"
+      [hideTransitionOptions]="'500ms'"
+      [enableService]="false"
+    />
+
+    <label>Vacation Period</label>
+    <p-calendar
+      #calendar
+      [(ngModel)]="date5"
+      selectionMode="range"
+      [readonlyInput]="true"
+      inputId="vacationRange"
+      [disabledDates]="invalidDates"
+      [minDate]="minDate"
+      [maxDate]="maxDate"
+      [numberOfMonths]="2"
+      [showIcon]="true"
+      (onSelect)="onSelect($event, calendar)"
+
+
+    ></p-calendar>
+  </div>
+</p-dialog>
