urmeaza sa modific tabelul cu cereri de concediu

--- a/frontend/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.scss
+++ b/frontend/src/app/pages/dashboard/employee-dashboard/employee-dashboard.component.scss
@@ -26,3 +26,10 @@
 }
 
 
+.vacation-form-field {
+  margin-bottom: 1.5rem; /* Adaugă distanță între câmpuri */
+}
+
+.dropdown-field {
+  margin-top: 1.5rem; /* Adaugă distanță între calendar și dropdown */
+}
